# levels-rank

./: .gitignore  .tool-versions  LICENSE  README.md  package.json
levels-rank-api/: .env.example  package.json  pm2.config.js  pnpm-lock.yaml
levels-rank-api-go/: go.mod  go.sum  levels-rank-api-go  main.go
levels-rank-api-go/prisma/: schema.prisma
levels-rank-api-rails/: Gemfile
levels-rank-api-rails/config/: application.rb  cable.yml  credentials.yml.enc  database.yml  routes.rb
levels-rank-api-rust/: Cargo.toml  Rocket.toml  package.json  pm2.config.js
levels-rank-api-rust/.cargo/: config.toml
levels-rank-api-rust/discord_bot/: Cargo.toml
levels-rank-api-rust/discord_bot/src/: bot_helper.rs  commands.rs  commands_adm.rs  lib.rs  main.rs  tables.rs
levels-rank-api-rust/prisma/: Cargo.toml  schema.prisma
levels-rank-api-rust/prisma-cli/: Cargo.toml
levels-rank-api-rust/prisma/migrations/0_init/: migration.sql
levels-rank-api-rust/prisma/migrations/20230722170221_add_espired_to_mix/: migration.sql
levels-rank-api-rust/prisma/migrations/20230817160954_add_cron_table/: migration.sql
levels-rank-api-rust/prisma/migrations/20230817161911_add_uuid_field/: migration.sql
levels-rank-api-rust/prisma/migrations/20230817162447_rename_table_cron_to_mix_schedule/: migration.sql
levels-rank-api-rust/prisma/migrations/20230818011610_mix_schedule_id_is_uuid_from_schedule/: migration.sql
levels-rank-api-rust/prisma/migrations/20230902164940_add_mix_bans/: migration.sql
levels-rank-api-rust/prisma/src/: lib.rs
levels-rank-api-rust/shared/: Cargo.toml
levels-rank-api-rust/shared/src/: cron_helper.rs  date_helper.rs  lib.rs  mix_helper.rs  steam_helper.rs
levels-rank-api-rust/src/: db.rs  main.rs
levels-rank-api-rust/src/app/: mod.rs  steam_controller.rs
levels-rank-api-rust/src/bot/: bot_helper.rs  commands.rs  commands_adm.rs  helpers.rs  mod.rs
levels-rank-api-rust/src/controllers/: mod.rs  players.rs  players_controller.rs
levels-rank-api-rust/src/controllers/players_controller/: mod.rs
levels-rank-api-rust/src/helpers/: bot.rs  cors.rs  cron_helper.rs  mix_helper.rs  mod.rs  steam.rs  steam_helper.rs
levels-rank-api-rust/src/models/: player.rs  user.rs
levels-rank-api-rust/src/shared/: constants.rs  mod.rs
levels-rank-api/prisma/: schema.prisma
levels-rank-front/: .eslintrc.cjs  index.html  package.json  pm2.config.cjs  pnpm-lock.yaml  tailwind.config.js  vite.config.js
levels-rank-new-front/: package.json  pnpm-lock.yaml  tailwind.config.js
levels_rank_api_phx/: .gitignore  README.md  mix.exs
(+87 files in other folders)
