[package]
name = "levels-rank-api-rust"
version = "0.1.0"
default-run = "levels-rank-api-rust"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["prisma-cli"]
resolver = "2"

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8" }
serde = "1.0.167"
reqwest ={ version = "0.11.18", features =  ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
serde_json = "1.0.100"


