[package]
name = "levels-rank-api-rust"
version = "0.1.0"
default-run = "levels-rank-api-rust"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["prisma-cli", "discord_bot"]
resolver = "2"

[dependencies]

# my libs
discord_bot = { path = "./discord_bot" }
shared = { path = "./shared" }
db = { path = "./prisma" }

rocket = { version = "=0.5.0-rc.3", features = ["json"] }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8" }
serde = "1.0.167"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
tokio = { version = "1.31.0" }
dotenv = "0.15.0"
serde_json = "1.0.100"
serenity = "0.11.6"
tabled = "0.14.0"
chrono = "0.4.26"
rand = "0.8.5"
tokio-cron-scheduler = "0.9.4"
uuid = "1.4.1"
color-print = "0.3.4"

# Enable a small amount of optimization in debug mode
[profile.dev]
codegen-units = 1
opt-level = "z"

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
codegen-units = 1
opt-level = "z"
